GGB-1009 Item's stylebar position fixed at clicking on the 1st visible item.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@48334 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -3439,13 +3439,19 @@ body.application[dir=rtl] .imageCorner {
 	display: inline-block;
 }
 
-.scrollableTextBox > div{
+.scrollableTextBox > .avTextItem{
 	width: ~"calc(100% - 18px)";
 	overflow-x: hidden;
 	display: inline;
 }
 
-.scrollableTextBox > div::-webkit-scrollbar{
+.scrollableTextBox > .gwt-PushButton{
+	display: inline;
+	position: relative;
+	right: 10px;
+}
+
+.scrollableTextBox > .avTextItem::-webkit-scrollbar{
 	display: none;
 }
 
